前端-确定结构，引入echart

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^1.0.0",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.2",
     "element-plus": "^2.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
