--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.0.0",
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "echarts": "^5.3.2",
     "element-plus": "^2.0.4",
+    "highlight.js": "^11.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "md-editor-v3": "^1.11.12",
     "request": "^2.88.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
